src/objects/SALT_Courses_Customized_Resource_Form__c.object
<CustomObject>
    <description>If a school wants customized resources within their instance of SALT Courses check the box on the acocunt page called SALT Courses Customized Resources and then fill out the SALT Courses Customized Resources Form</description>
    <fields>
        <fullName>Course10__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Credit and Debt Management</fullName>
                </value>
                <value>
                    <fullName>Educational Planning</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Insurance and Risk Management</fullName>
                </value>
                <value>
                    <fullName>Internships, Income, and Careers</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Saving and Investing</fullName>
                </value>
                <value>
                    <fullName>Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course11__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Credit and Debt Management</fullName>
                </value>
                <value>
                    <fullName>Educational Planning</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Insurance and Risk Management</fullName>
                </value>
                <value>
                    <fullName>Internships, Income, and Careers</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Saving and Investing</fullName>
                </value>
                <value>
                    <fullName>Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course12__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Credit and Debt Management</fullName>
                </value>
                <value>
                    <fullName>Educational Planning</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Insurance and Risk Management</fullName>
                </value>
                <value>
                    <fullName>Internships, Income, and Careers</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Saving and Investing</fullName>
                </value>
                <value>
                    <fullName>Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Couse5__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Credit and Debt Management</fullName>
                </value>
                <value>
                    <fullName>Educational Planning</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Insurance and Risk Management</fullName>
                </value>
                <value>
                    <fullName>Internships, Income, and Careers</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Saving and Investing</fullName>
                </value>
                <value>
                    <fullName>Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResourceLink10__c</fullName>
        <description>Please put in text and resource link school requested.</description>
        <inlineHelpText>Please put in text and resource link school requested.</inlineHelpText>
        <label>ResourceLink</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResourceLink11__c</fullName>
        <description>Please put in text and resource link school requested.</description>
        <inlineHelpText>Please put in text and resource link school requested.</inlineHelpText>
        <label>ResourceLink</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResourceLink12__c</fullName>
        <description>Please put in text and resource link school requested.</description>
        <inlineHelpText>Please put in text and resource link school requested.</inlineHelpText>
        <label>ResourceLink</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Link1__c</fullName>
        <description>Please put in text and resource link school requested.</description>
        <inlineHelpText>Please put in text and resource link school requested.</inlineHelpText>
        <label>Resource Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MM101_Customized_Resources_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SALT Courses Customized Resource Form</label>
    <nameField>
        <label>SALT Courses Customized Resource Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALT Courses Customized Resources Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>